overflow bug in mobile fixed

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -15,6 +15,9 @@ body {
 	        box-sizing: border-box;
 	background: radial-gradient(85.6% 215.15% at 22.6% 18.1%, #090909 0%, #242424 100%);
 }
+html,body{
+	overflow-x: hidden;
+}
 /*BODY CSS ENDS*/ 
 /*NAVBAR CSS*/
 
